# assembly-theory-JOSS

./: .gitignore  .gitmodules  Makefile  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: draft-pdf.yml
arxiv/: .gitignore  acmart.cls  main.tex
scripts/: bench_stats.py  benchmark.rs  dataset_curation.ipynb  jossplot.py  main_test.go  orca_fig.py
